# spd

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.binder/: requirements.txt
.github/workflows/: docs.yml
docs/: conf.py  index.rst  requirements.txt
docs/api/: index.rst  integrators.rst  physics.rst  runtime_numerics.rst  schemes.rst  simulator.rst  spatial.rst
docs/guides/: architecture.rst  configuration_matrix.rst  (+1 more)
notebooks/: DMR.ipynb  Introduction.ipynb  Performance_phase2.ipynb  RTI.ipynb  _build_tutorials.py  bench_cutensor_out.py  bench_gpu_opts.py  bench_zcps.py  phase_timing.py  phase_timing_rk3.py  plot_colormaps.py  plot_zcps.py  plot_zcps_1d2d.py  plot_zcps_2d.py  profile_gpu.py  run_zcps_sweep.sh  run_zcps_sweep_1d2d.sh  run_zcps_sweep_2d.sh  verify_branch.py  verify_fused.py  zcps_results.jsonl  zcps_results_1d2d.jsonl  zcps_results_2d.jsonl
spd/: fv_simulator.py  initial_conditions_1d.py  initial_conditions_3d.py  sdfb_simulator.py  simulator.py  spd_simulator.py  trouble_detection.py
src/: comms.py  data_management.py  fv_simulator.py  hydro.py  initial_conditions_2d.py  initial_conditions_3d.py  mhd.py  muscl.py  polynomials.py  riemann_solver.py  sd_boundary.py  sd_multigrid.py  sd_simulator.py  sdader_simulator.py  sdfb_simulator.py  simulator.py  transforms.py  trouble_detection.py
test/: test_amr_dynamic.py  test_amr_fallback.py  test_amr_mass_conservation.py  test_create.py  test_hydro_gpu.py  test_induction_infrastructure.py  test_polynomials.py  test_preserve.py  test_transforms.py  test_update.py
utils/: visualization.py
(+94 files in other folders)
